# AbyssFreetype

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/Private/: abyft.cpp  main.cpp  serializer.cpp
Source/Public/FT/: abyft.h  common.h  serializer.h
Source/Tests/: Test.cpp
